added custom font

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
       content="react-snake"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="stylesheet" href="./fonts.css">
     <title>react-snake</title>
   </head>
   <body>
